# fastapi_client

./: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
example/: usage_example.py
example/client/: __init__.py  api_client.py  auth.py  exceptions.py  models.py  password_flow_client.py
example/client/api/: pet_api.py  store_api.py  user_api.py
example/client/docs/: Pet.md  PetApi.md  StoreApi.md  UserApi.md
example/fastapi_client/: api_client.py  auth.py  password_flow_client.py
example/fastapi_client/api/: __init__.py  pet_api.py  store_api.py  user_api.py
openapi-python-templates/: README.mustache  __init__api.mustache  __init__model.mustache  __init__package.mustache  _dataTypeApi.mustache  _dataTypeModel.mustache  _innerReturnType.mustache  _returnType.mustache  api.mustache  api_client.mustache  configuration.mustache  exceptions.mustache  model.mustache  requirements.mustache  setup.mustache  test-requirements.mustache  tox.mustache  travis.mustache
other-templates/: .openapi-generator-ignore  auth.template  password_flow_client.template
scripts/: _openapi-generate.sh  _postprocess-docker.sh  _postprocess.sh  develop.sh  generate.sh  lint.sh  regenerate-example.sh  test.sh  testcov.sh
scripts/dev/: install.sh  regenerate-example.sh  test.sh  testcov.sh
scripts/util/: openapi-generate.sh  postprocess-docker.sh  postprocess.sh
tests/: auth_app.py  conftest.py  run_auth_app.py  test_auth.py  test_client.py  test_import.py
tests/server_app/: __init__.py  __main__.py  app.py  models.py
(+3 files in other folders)
