[tool.poetry]
name = "example"
version = "0.3.0"
description = ""
authors = ["David Montague"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
pydantic = "*"
httpx = "*"
typing_extensions = "*"

[tool.poetry.dev-dependencies]
starlette = "*"

pytest = "*"
pytest-cov = "*"
coverage = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"
mypy = "*"

python-multipart = "*"
uvicorn = "*"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
    | pybind11
  )/
)
'''

[tool.isort]
line_length = 120
known_first_party = ["client"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
